# library-system

./: .gitignore  docker-compose.yml  pyproject.toml
library_management/: settings.py
library_management_system/: settings.py
